--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "angular": "~1.3.12",
-    "phaser": "~2.2.2"
+    "phaser": "~2.2.2",
+    "phaser-plugin-isometric": "https://github.com/lewster32/phaser-plugin-isometric.git"
   }
 }
