--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "angular": "~1.3.12",
     "phaser": "~2.2.2",
-    "phaser-plugin-isometric": "https://github.com/lewster32/phaser-plugin-isometric.git"
+    "phaser-plugin-isometric": "https://github.com/lewster32/phaser-plugin-isometric.git",
+    "matrix": "https://github.com/STRd6/matrix.js.git"
   }
 }
